--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">5,163</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">4,086</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Reflektion.org.Reflektion.BasePage</td><td><a href="#m0">verifyAtlestHundredRecordsAreBeingReturned</a></td><td rowspan="1">1604069989116</td><td rowspan="1">3213</td></tr><tr class="passedeven"><td><a href="#m1">verifyInvalidGetRequest</a></td><td rowspan="1">1604069992336</td><td rowspan="1">964</td></tr><tr class="passedeven"><td><a href="#m2">verifyOnlyOneRecordIsBeingReturned</a></td><td rowspan="1">1604069993317</td><td rowspan="1">927</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.PostRequest</td><td><a href="#m0">verifyAtlestHundredRecordsAreBeingReturned</a></td><td rowspan="1">1604120829183</td><td rowspan="1">4041</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Reflektion.org.Reflektion.BasePage#verifyAtlestHundredRecordsAreBeingReturned</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Reflektion.org.Reflektion.BasePage#verifyInvalidGetRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Reflektion.org.Reflektion.BasePage#verifyOnlyOneRecordIsBeingReturned</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testCases.PostRequest#verifyAtlestHundredRecordsAreBeingReturned</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
