--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\chicharles\AppData\Local\Temp\testng-eclipse-2039435047\testng-customsuite.xml</span>
+                    <span>C:\Users\chicharles\AppData\Local\Temp\testng-eclipse-1597610702\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Reflektion.org.Reflektion.BasePage" hash-for-method="verifyAtlestHundredRecordsAreBeingReturned">verifyAtlestHundredRecordsAreBeingReturned</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Reflektion.org.Reflektion.BasePage" hash-for-method="verifyInvalidGetRequest">verifyInvalidGetRequest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Reflektion.org.Reflektion.BasePage" hash-for-method="verifyOnlyOneRecordIsBeingReturned">verifyOnlyOneRecordIsBeingReturned</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.PostRequest" hash-for-method="verifyAtlestHundredRecordsAreBeingReturned">verifyAtlestHundredRecordsAreBeingReturned</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Reflektion.org.Reflektion.BasePage</span>
+              <span class="class-name">testCases.PostRequest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -140,26 +130,12 @@
                   <span class="method-name">verifyAtlestHundredRecordsAreBeingReturned</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyInvalidGetRequest">
-                  </a> <!-- verifyInvalidGetRequest -->
-                  <span class="method-name">verifyInvalidGetRequest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyOnlyOneRecordIsBeingReturned">
-                  </a> <!-- verifyOnlyOneRecordIsBeingReturned -->
-                  <span class="method-name">verifyOnlyOneRecordIsBeingReturned</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\chicharles\AppData\Local\Temp\testng-eclipse-2039435047\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\chicharles\AppData\Local\Temp\testng-eclipse-1597610702\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Reflektion.org.Reflektion.BasePage&quot;/&gt;
+      &lt;class name=&quot;testCases.PostRequest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyAtlestHundredRecordsAreBeingReturned')
-data.setCell(0, 2, 'Reflektion.org.Reflektion.BasePage')
-data.setCell(0, 3, 3213);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyInvalidGetRequest')
-data.setCell(1, 2, 'Reflektion.org.Reflektion.BasePage')
-data.setCell(1, 3, 964);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyOnlyOneRecordIsBeingReturned')
-data.setCell(2, 2, 'Reflektion.org.Reflektion.BasePage')
-data.setCell(2, 3, 927);
+data.setCell(0, 2, 'testCases.PostRequest')
+data.setCell(0, 3, 4041);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,18 +219,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Reflektion.org.Reflektion.BasePage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.PostRequest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">verifyAtlestHundredRecordsAreBeingReturned</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyInvalidGetRequest</span>
-                <span class="method-start">3220 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyOnlyOneRecordIsBeingReturned</span>
-                <span class="method-start">4201 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
