--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9a889">  <td>20/10/30 20:29:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BasePage.verifyAtlestHundredRecordsAreBeingReturned()[pri:0, instance:Reflektion.org.Reflektion.BasePage@6a4f787b]">verifyAtlestHundredRecordsAreBeingReturned</td> 
-  <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/10/30 20:29:52</td>   <td>3220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BasePage.verifyInvalidGetRequest()[pri:0, instance:Reflektion.org.Reflektion.BasePage@6a4f787b]">verifyInvalidGetRequest</td> 
-  <td>main@101478235</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/10/30 20:29:53</td>   <td>4201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BasePage.verifyOnlyOneRecordIsBeingReturned()[pri:0, instance:Reflektion.org.Reflektion.BasePage@6a4f787b]">verifyOnlyOneRecordIsBeingReturned</td> 
-  <td>main@101478235</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/10/31 10:37:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequest.verifyAtlestHundredRecordsAreBeingReturned()[pri:0, instance:testCases.PostRequest@42d80b78]">verifyAtlestHundredRecordsAreBeingReturned</td> 
+  <td>main@343965883</td>   <td></td> </tr>
 </table>
