--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">4,086</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">6,327</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.PostRequest</td><td><a href="#m0">verifyAtlestHundredRecordsAreBeingReturned</a></td><td rowspan="1">1604120829183</td><td rowspan="1">4041</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.DeleteRequest</td><td><a href="#m0">verifyDeleteRequest</a></td><td rowspan="1">1604200861427</td><td rowspan="1">879</td></tr><tr class="passedodd"><td rowspan="3">testCases.GetRequest</td><td><a href="#m1">verifyAtlestHundredRecordsAreBeingReturned</a></td><td rowspan="1">1604200857768</td><td rowspan="1">2883</td></tr><tr class="passedodd"><td><a href="#m2">verifyInvalidGetRequest</a></td><td rowspan="1">1604200860661</td><td rowspan="1">377</td></tr><tr class="passedodd"><td><a href="#m3">verifyOnlyOneRecordIsBeingReturned</a></td><td rowspan="1">1604200861045</td><td rowspan="1">367</td></tr><tr class="passedeven"><td rowspan="1">testCases.PostRequest</td><td><a href="#m4">verifyPostRequest</a></td><td rowspan="1">1604200862310</td><td rowspan="1">919</td></tr><tr class="passedodd"><td rowspan="1">testCases.PutRequest</td><td><a href="#m5">verifyPutRequest</a></td><td rowspan="1">1604200863236</td><td rowspan="1">815</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.PostRequest#verifyAtlestHundredRecordsAreBeingReturned</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">testCases.DeleteRequest#verifyDeleteRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.GetRequest#verifyAtlestHundredRecordsAreBeingReturned</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.GetRequest#verifyInvalidGetRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.GetRequest#verifyOnlyOneRecordIsBeingReturned</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testCases.PostRequest#verifyPostRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">testCases.PutRequest#verifyPutRequest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
