--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9a889">  <td>20/10/31 10:37:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequest.verifyAtlestHundredRecordsAreBeingReturned()[pri:0, instance:testCases.PostRequest@42d80b78]">verifyAtlestHundredRecordsAreBeingReturned</td> 
+<tr bgcolor="e9a889">  <td>20/11/01 08:45:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRequest.verifyDeleteRequest()[pri:0, instance:testCases.DeleteRequest@42d80b78]">verifyDeleteRequest</td> 
   <td>main@343965883</td>   <td></td> </tr>
 </table>
