--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9a889">  <td>20/11/01 08:50:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequest.verifyAtlestHundredRecordsAreBeingReturned()[pri:0, instance:testCases.GetRequest@5e3a8624]">verifyAtlestHundredRecordsAreBeingReturned</td> 
-  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="8a60e3">  <td>20/11/01 08:51:01</td>   <td>3659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRequest.verifyDeleteRequest()[pri:0, instance:testCases.DeleteRequest@5c3bd550]">verifyDeleteRequest</td> 
-  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/11/01 08:51:00</td>   <td>2893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequest.verifyInvalidGetRequest()[pri:0, instance:testCases.GetRequest@5e3a8624]">verifyInvalidGetRequest</td> 
-  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>20/11/01 08:51:01</td>   <td>3277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequest.verifyOnlyOneRecordIsBeingReturned()[pri:0, instance:testCases.GetRequest@5e3a8624]">verifyOnlyOneRecordIsBeingReturned</td> 
-  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="8b7f67">  <td>20/11/01 08:51:02</td>   <td>4542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequest.verifyPostRequest()[pri:0, instance:testCases.PostRequest@91161c7]">verifyPostRequest</td> 
-  <td>main@836514715</td>   <td></td> </tr>
-<tr bgcolor="c7a4e4">  <td>20/11/01 08:51:03</td>   <td>5468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutRequest.verifyPutRequest()[pri:0, instance:testCases.PutRequest@604ed9f0]">verifyPutRequest</td> 
-  <td>main@836514715</td>   <td></td> </tr>
+<tr bgcolor="aedc67">  <td>20/11/01 16:07:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequest.verifyAtlestHundredRecordsAreBeingReturned()[pri:0, instance:testCases.GetRequest@13805618]">verifyAtlestHundredRecordsAreBeingReturned</td> 
+  <td>main@1627821297</td>   <td></td> </tr>
+<tr bgcolor="acaea5">  <td>20/11/01 16:07:27</td>   <td>4866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRequest.verifyDeleteRequest()[pri:0, instance:testCases.DeleteRequest@56ef9176]">verifyDeleteRequest</td> 
+  <td>main@1627821297</td>   <td></td> </tr>
+<tr bgcolor="aedc67">  <td>20/11/01 16:07:26</td>   <td>3190</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequest.verifyInvalidGetRequest()[pri:0, instance:testCases.GetRequest@13805618]">verifyInvalidGetRequest</td> 
+  <td>main@1627821297</td>   <td></td> </tr>
+<tr bgcolor="aedc67">  <td>20/11/01 16:07:27</td>   <td>4176</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRequest.verifyOnlyOneRecordIsBeingReturned()[pri:0, instance:testCases.GetRequest@13805618]">verifyOnlyOneRecordIsBeingReturned</td> 
+  <td>main@1627821297</td>   <td></td> </tr>
+<tr bgcolor="d56d67">  <td>20/11/01 16:07:29</td>   <td>5953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequest.verifyPostRequest()[pri:0, instance:testCases.PostRequest@4566e5bd]">verifyPostRequest</td> 
+  <td>main@1627821297</td>   <td></td> </tr>
+<tr bgcolor="83b5a8">  <td>20/11/01 16:07:30</td>   <td>7056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PutRequest.verifyPutRequest()[pri:0, instance:testCases.PutRequest@1ed4004b]">verifyPutRequest</td> 
+  <td>main@1627821297</td>   <td></td> </tr>
 </table>
