--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9a889">  <td>20/11/01 11:36:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteRequest.verifyDeleteRequest()[pri:0, instance:testCases.DeleteRequest@42d80b78]">verifyDeleteRequest</td> 
-  <td>main@343965883</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>20/11/01 16:02:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostRequest.verifyPostRequest()[pri:0, instance:testCases.PostRequest@6e1567f1]">verifyPostRequest</td> 
+  <td>main@2068434592</td>   <td></td> </tr>
 </table>
